src/App.css
/* ... */
.section__title {
  color: #6415ff;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.section__subtitle {
  font-size: 48px;
  font-weight: 900;
  margin: 20px 0;
}

.section__text {
  color: #7c8ba1;
  font-size: 18px;
  font-weight: 500;
  max-width: 500px;
  text-align: center;
}

/* 

QUALITY WORK SECTION

*/

#quality-work .section__text {
  text-align: left;
}

.quality-work__row {
  display: flex;
  padding: 0 32px;
}

.quality-work__description {
  width: 50%;
  margin-right: 64px;
}

.quality-work__img--wrapper {
  margin: 0 56px;
  width: 50%;
}

.quality-work__img {
  width: 100%;
  border: 1px solid rgba(0, 0, 0, 0.1);
}

.quality-work__button {
  margin-top: 32px;
  background-color: #6415ff;
  padding: 12px 32px;
  font-size: 14px;
  border-radius: 24px;
  border: none;
  color: #fff;
  font-weight: bold;
}

.quality-work__button:hover {
  background-color: #4e11c8;
}

/* 

STEPS 

*/

#steps .row {
  align-items: center;
  padding: 0 32px;
}

.list__step {
  display: flex;
}

.list__step--number {
  color: #cbd5e0;
  font-size: 36px;
  font-weight: 600;
}

.step__description {
  margin-left: 24px;
}

.steps__illustration--wrapper {
  width: 50%;
}

.steps__side--right {
  width: 50%;
  padding: 32px 0 32px 64px;
}

.steps__illustration {
  width: 100%;
}

.step__title {
  font-size: 20px;
  font-weight: 600;
}

.list__step--para {
  color: #718096;
  font-size: 14px;
  font-weight: 500;
  line-height: 2;
  margin-top: 12px;
  margin-bottom: 24px;
}

.steps__list {
  margin-top: 40px;
  max-width: 400px;
}

/* 

VALUES 

*/

#values .section__text {
  text-align: left;
}

.values__row {
  padding: 0 32px;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.values__side--left {
  display: flex;
  flex-direction: column;
  width: 50%;
  margin-right: 32px;
}

.values__illustration--wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
}

.values__illustration {
  width: 100%;
}

.section__para {
  padding-top: 8px;
  padding-bottom: 16px;
  color: #7c8ba1;
  font-size: 18px;
  font-weight: 500;
}

.value__header {
  display: flex;
  margin: 16px 0;
  align-items: center;
}

.values__list {
  display: flex;
  margin-bottom: 32px;
}

.list__value {
  width: 50%;
  margin-right: 32px;
}

.value__para {
  font-size: 16px;
  color: #718096;
}

.value__title {
  margin-left: 8px;
}

.value__icon--wrapper {
  border-radius: 50%;
  padding: 8px;
  background-color: #9ae6b4;
}

.list__value:nth-child(2) .value__icon--wrapper {
  background-color: #feb2b2;
}

#values .quality-work__button {
  margin-top: 0;
  width: 175px;
}

/* 

PRICING 

*/

.pricing__row {
  flex-direction: column;
  align-items: center;
  padding: 0 32px;
}

.pricing__list {
  display: flex;
  width: 100%;
}

.pricing__list--plan {
  width: calc(100% / 3);
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: 0 0 10px 0.2px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  padding: 16px 0;
  position: relative;
}

.pricing__list--plan:nth-child(2) {
  margin: 0 24px;
  background: linear-gradient(
    135deg,
    rgb(76, 81, 191) 0%,
    rgb(102, 126, 234) 100%
  );
}

.pricing__list--plan:nth-child(2) .plan__title,
.pricing__list--plan:nth-child(2) .plan__price,
.pricing__list--plan:nth-child(2) .plan__period,
.pricing__list--plan:nth-child(2) .plan__target-audience,
.pricing__list--plan:nth-child(2) .plan__highlight {
  color: #f7fafc;
}

.pricing__para {
  max-width: 600px;
  text-align: center;
  margin-bottom: 32px;
}

.list__plan--top-half {
  font-weight: bold;
  text-align: center;
  line-height: 1.5;
  margin: 24px 0;
}

.plan__title,
.plan__price {
  color: #1a202c;
}

.plan__title {
  font-size: 20px;
  text-transform: uppercase;
}

.plan__price {
  font-size: 48px;
}

.plan__period {
  font-size: 16px;
  margin-top: 8px;
  text-transform: uppercase;
  color: #a0aec0;
  letter-spacing: 0.075em;
}

.list__plan--bottom-half {
  text-align: center;
}

.plan__highlights {
  list-style: none;
  line-height: 3;
  font-size: 16px;
  font-weight: 500;
}

.plan__highlight {
  color: #718096;
}

.pricing__line--break {
  border-top: 2px solid lightgray;
  opacity: 75%;
  width: 100%;
  margin: 16px 0;
}

.pricing__list--plan:nth-child(2) .pricing__line--break {
  opacity: 20%;
}

.plan__target-audience {
  font-size: 20px;
  font-weight: 700;
  margin: 16px;
}

.plan__button {
  color: #f7fafc;
  text-transform: uppercase;
  border: none;
  border-radius: 40px;
  padding: 16px 0;
  width: 80%;
  margin: 16px 0;
  font-weight: bold;
  transition: all 300ms ease;
}

.plan__button:hover {
  transform: translate(1px, -1px);
  box-shadow: -3px 5px 20px #1a202c3d;
}

.plan__stripe {
  position: absolute;
  height: 8px;
  width: 100%;
  top: 0;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.pricing__list--plan:nth-child(1) .plan__stripe {
  background: linear-gradient(
    115deg,
    rgb(56, 178, 172) 0%,
    rgb(129, 230, 217) 100%
  );
}

.pricing__list--plan:nth-child(1) .plan__button {
  background: linear-gradient(
    115deg,
    rgb(56, 178, 172) 0%,
    rgb(129, 230, 217) 100%
  );
}

.pricing__list--plan:nth-child(2) .plan__stripe {
  opacity: 0;
}

.pricing__list--plan:nth-child(2) .plan__button {
  color: #6415ff;
}

.pricing__list--plan:nth-child(3) .plan__stripe {
  background: linear-gradient(
    115deg,
    rgb(245, 101, 101) 0%,
    rgb(254, 178, 178) 100%
  );
}

.pricing__list--plan:nth-child(3) .plan__button {
  background: linear-gradient(
    115deg,
    rgb(245, 101, 101) 0%,
    rgb(254, 178, 178) 100%
  );
}

/* 

TESTIMONIALS 

*/

#testimonials .row {
  padding: 0 32px;
}

.testimonial__bottom {
  display: flex;
  margin-top: 40px;
}

.testimonials__illustration {
  width: 100%;
}

.testimonials__illustration--wrapper {
  width: 40%;
}

.testimonials__side--right {
  width: 60%;
  padding-left: 64px;
}

.testimonial__rating {
  margin: 20px 0;
}
/* ... */

